--- a/templates/admin/schedule_calendar.html
+++ b/templates/admin/schedule_calendar.html
@@ -3,6 +3,7 @@
 <h1>{{ title }}</h1>
 <div style="margin-bottom: 20px;">
     <a href="?month={{ month|add:'-1' }}&year={{ year }}">Предыдущий месяц</a> |
+    <a href="">Текущий</a>
     <a href="?month={{ month|add:'1' }}&year={{ year }}">Следующий месяц</a>
 </div>
 <div>
